experimenting with points pruning

--- a/python/notebooks/[Sandbox,MWE] SIREN.ipynb
+++ b/python/notebooks/[Sandbox,MWE] SIREN.ipynb
@@ -2,9 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/media/dicarlod/SSD_2/diego/Code/INCANT/python/notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -16,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +42,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "\n",
+    "import scipy.interpolate as interpolate\n",
+    "from matplotlib.colors import LogNorm\n",
     "\n",
     "from tqdm import tqdm\n",
     "\n",
@@ -32,18 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data t0: (24253, 4)\n",
+      "Data t1: (26658, 4)\n",
+      "min [  6.375 216.5   248.309   0.   ]\n",
+      "mean [ 36.41119797 238.84924672 261.26950427   0.52361965]\n",
+      "max [ 64.5   261.5   275.804   1.   ]\n"
+     ]
+    }
+   ],
    "source": [
     "# Load Data\n",
     "path_to_csv0 = Path(\"../../data/clippeddata/clippedMarco0.txt\")\n",
     "path_to_csv1 = Path(\"../../data/clippeddata/clippedMarco1.txt\")\n",
-    "\n",
-    "# data_t0 = pd.read_csv(path_to_csv0)[[\"X\", \"Y\", \"Z\"]]\n",
-    "# data_t0[\"T\"] = 0\n",
-    "# data_t1 = pd.read_csv(path_to_csv1)[[\"X\", \"Y\", \"Z\"]]\n",
-    "# data_t1[\"T\"] = 1\n",
     "\n",
     "data_t0 = pd.read_csv(path_to_csv0).to_numpy()[:,:3]\n",
     "data_t0 = np.concatenate([data_t0, np.zeros((data_t0.shape[0],1))], axis=-1)\n",
@@ -57,8 +86,15 @@
     "\n",
     "print(\"min\", np.min(data, axis=0))\n",
     "print(\"mean\", np.mean(data, axis=0))\n",
-    "print(\"max\", np.max(data, axis=0))\n",
-    "\n",
+    "print(\"max\", np.max(data, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create dataloader\n",
     "class MarcoDataset(torch.utils.data.Dataset):\n",
     "    def __init__(self, data, col_names, device):\n",
@@ -74,11 +110,6 @@
     "        for d in range(self.coords.shape[1]):\n",
     "            assert torch.max(self.coords[:,d][0]) <  1\n",
     "            assert torch.max(self.coords[:,d][0]) > -1\n",
-    "        \n",
-    "        # indices = np.random.permutation(np.arange(n_obs))\n",
-    "        # n_train = n_obs - n_val - n_test\n",
-    "        # train_idx = indices[:n_train]\n",
-    "        # val_idx = indices[n_train:n_train+n_val]\n",
     "        \n",
     "        print(self.coords.shape)\n",
     "        print(self.target.shape)\n",
