--- a/Unsupervised_CD_with_INR.ipynb
+++ b/Unsupervised_CD_with_INR.ipynb
@@ -156,6 +156,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Plotting downsampled PCs"
+      ],
+      "metadata": {
+        "id": "OXNG5j1mRsdx"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
@@ -207,6 +216,15 @@
         "plt.colorbar()\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training parameters"
+      ],
+      "metadata": {
+        "id": "dkKFczFiR5FK"
+      }
     },
     {
       "cell_type": "code",
@@ -327,6 +345,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Evaluation -- Predicting city's surface"
+      ],
+      "metadata": {
+        "id": "lRNWzEHdRnYZ"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -395,6 +422,15 @@
         "\n",
         "print(iou(gt, pred))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Plotting the reconstruction and difference in altitude"
+      ],
+      "metadata": {
+        "id": "pmybSQT0SalG"
+      }
     },
     {
       "cell_type": "code",
